Download files by code if it is necessary

--- a/mwu-mnist.ipynb
+++ b/mwu-mnist.ipynb
@@ -2,20 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-04T17:43:26.290491Z",
+     "start_time": "2018-10-04T17:43:25.976981Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import csv\n",
     "import math\n",
+    "import os.path\n",
+    "import urllib.request\n",
     "\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-04T17:43:26.831435Z",
+     "start_time": "2018-10-04T17:43:26.822197Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def mwu(expert_classification_list, correct_values_list, e=None):\n",
@@ -55,15 +67,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-04T18:16:39.742661Z",
+     "start_time": "2018-10-04T18:16:27.423624Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parsing files...\n"
+     ]
+    }
+   ],
    "source": [
     "# Open Mnist data\n",
     "# https://pjreddie.com/projects/mnist-in-csv/\n",
     "\n",
+    "file_url = 'https://pjreddie.com/media/files/'\n",
+    "\n",
     "test_data = 'mnist_test.csv'\n",
     "train_data = 'mnist_train.csv'\n",
+    "\n",
+    "# download file if not exists:\n",
+    "for file_name in [test_data, train_data]:\n",
+    "    if not os.path.isfile(file_name):\n",
+    "        print(f\"downloading {file_name}...\")\n",
+    "        urllib.request.urlretrieve(file_url + file_name, file_name) \n",
     "\n",
     "train_X = []\n",
     "train_Y = []\n",
@@ -73,6 +106,7 @@
     "#extract only zero and ones\n",
     "allowed_numbers = [0, 1]\n",
     "\n",
+    "print(\"parsing files...\")\n",
     "with open(train_data) as csv_file:\n",
     "    csv_reader = csv.reader(csv_file, delimiter=',')\n",
     "    for row in csv_reader:\n",
@@ -87,7 +121,8 @@
     "        int_row = [int(value) for value in row]\n",
     "        if int_row[0] in allowed_numbers:\n",
     "            test_X.append(int_row[1:])\n",
-    "            test_Y.append(int_row[0])"
+    "            test_Y.append(int_row[0])\n",
+    "print('finish')"
    ]
   }
  ],
