Create weak classifiers [WIP]

--- a/mwu-mnist.ipynb
+++ b/mwu-mnist.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T17:43:26.290491Z",
-     "start_time": "2018-10-04T17:43:25.976981Z"
+     "end_time": "2018-10-04T19:13:25.086553Z",
+     "start_time": "2018-10-04T19:13:25.082128Z"
     }
    },
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
     "import csv\n",
     "import math\n",
     "import os.path\n",
@@ -21,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T17:43:26.831435Z",
-     "start_time": "2018-10-04T17:43:26.822197Z"
+     "end_time": "2018-10-04T19:13:27.713385Z",
+     "start_time": "2018-10-04T19:13:27.659709Z"
     }
    },
    "outputs": [],
@@ -67,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T18:16:39.742661Z",
-     "start_time": "2018-10-04T18:16:27.423624Z"
+     "end_time": "2018-10-04T19:05:13.152813Z",
+     "start_time": "2018-10-04T19:04:59.924140Z"
     }
    },
    "outputs": [
@@ -79,7 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "parsing files...\n"
+      "parsing files...\n",
+      "finish\n"
      ]
     }
    ],
@@ -103,7 +105,7 @@
     "test_X = []\n",
     "test_Y = []\n",
     "\n",
-    "#extract only zero and ones\n",
+    "# extract only zero and ones\n",
     "allowed_numbers = [0, 1]\n",
     "\n",
     "print(\"parsing files...\")\n",
@@ -124,6 +126,63 @@
     "            test_Y.append(int_row[0])\n",
     "print('finish')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-04T19:15:04.878974Z",
+     "start_time": "2018-10-04T19:15:04.872569Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# define weak classifiers\n",
+    "classifier_list = []\n",
+    "for i in range(26 * 26):\n",
+    "    count_first_class_times = defaultdict(int)\n",
+    "    count_second_class_times = defaultdict(int)\n",
+    "    for j in range(len(train_Y)):\n",
+    "        if train_Y[j] == allowed_numbers[0]:\n",
+    "            count_first_class_times[train_X[i]] += 1\n",
+    "        else:\n",
+    "            count_second_class_times[train_X[i]] += 1\n",
+    "    for j in range(255):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-04T19:15:11.137692Z",
+     "start_time": "2018-10-04T19:15:11.125913Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_first_class_times[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
