--- a/mwu-mnist.ipynb
+++ b/mwu-mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-04T19:13:25.086553Z",
@@ -17,12 +17,16 @@
     "import os.path\n",
     "import urllib.request\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "plt.rcParams['figure.figsize'] = [12, 6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-04T19:13:27.713385Z",
@@ -41,6 +45,8 @@
     "    loss = [0]\n",
     "    m = len(expert_classification_list)  # number of experts\n",
     "    T = len(expert_classification_list[0])  # total steps\n",
+    "    print(f\"m = {m}\")\n",
+    "    print(f\"T = {T}\")\n",
     "    if e is None:  # use default\n",
     "        e = math.sqrt(math.log(m) / T) \n",
     "    w = [1 for _ in range(m)]  # initial weights\n",
@@ -51,9 +57,9 @@
     "        # expert_choosed = np.random.choice([i for i in range(T)], 1, p=p)[0]\n",
     "        expert_losses = [1 if expert_classification_list[i][t] != correct_values_list[t] \n",
     "                         else 0 \n",
-    "                         for i in m]\n",
+    "                         for i in range(m)]\n",
     "        current_loss = sum([expert_losses[i] * p[i] \n",
-    "                            for i in range(T)])\n",
+    "                            for i in range(m)])\n",
     "        loss.append(loss[t] + current_loss)\n",
     "        \n",
     "        for i in range(m):\n",
@@ -63,12 +69,12 @@
     "        for i in range(m):\n",
     "            p[i] = w[i] / sum_weights\n",
     "            \n",
-    "    return p, loss        "
+    "        yield (p, loss)        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-04T19:05:13.152813Z",
@@ -88,7 +94,7 @@
    "source": [
     "# Open Mnist data\n",
     "# https://pjreddie.com/projects/mnist-in-csv/\n",
-    "\n",
+    "# Image shape = (28 x 28)\n",
     "file_url = 'https://pjreddie.com/media/files/'\n",
     "\n",
     "test_data = 'mnist_test.csv'\n",
@@ -124,12 +130,13 @@
     "        if int_row[0] in allowed_numbers:\n",
     "            test_X.append(int_row[1:])\n",
     "            test_Y.append(int_row[0])\n",
+    "\n",
     "print('finish')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-04T19:15:04.878974Z",
@@ -139,42 +146,127 @@
    "outputs": [],
    "source": [
     "# define weak classifiers\n",
+    "# the classifier for the pixel_i is a classifier f(x) where \n",
+    "# f(x) = digit_1 if x <= K and f(x) is digit_2 otherwise  \n",
     "classifier_list = []\n",
-    "for i in range(26 * 26):\n",
+    "for i in range(28 * 28):\n",
     "    count_first_class_times = defaultdict(int)\n",
     "    count_second_class_times = defaultdict(int)\n",
     "    for j in range(len(train_Y)):\n",
     "        if train_Y[j] == allowed_numbers[0]:\n",
-    "            count_first_class_times[train_X[i]] += 1\n",
+    "            count_first_class_times[train_X[j][i]] += 1\n",
     "        else:\n",
-    "            count_second_class_times[train_X[i]] += 1\n",
+    "            count_second_class_times[train_X[j][i]] += 1\n",
+    "    diffs = [count_second_class_times[k] - count_first_class_times[k] for k in range(255)]\n",
+    "    sum_diffs = []\n",
+    "    \n",
     "    for j in range(255):\n",
-    "        "
+    "        if j == 0:\n",
+    "            sum_diffs.append(diffs[0])\n",
+    "        else:\n",
+    "            sum_diffs.append(diffs[j] + sum_diffs[j-1])\n",
+    "    \n",
+    "    max_deviation = max([abs(sum_diff) for sum_diff in sum_diffs])\n",
+    "    for pixel_level in range(255):\n",
+    "        if abs(sum_diffs[pixel_level]) == max_deviation:\n",
+    "            classifier_list.append((pixel_level,\n",
+    "                                    (False if sum_diffs[pixel_level] > 0\n",
+    "                                     else True)))\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-04T19:15:11.137692Z",
      "start_time": "2018-10-04T19:15:11.125913Z"
     }
    },
+   "outputs": [],
+   "source": [
+    "# get the expert classification list\n",
+    "expert_classification_list = []\n",
+    "\n",
+    "for classifier_index in range(len(classifier_list)):\n",
+    "    classifier_treshold, is_first_digit_flag = classifier_list[classifier_index]\n",
+    "    expert_classifications = []\n",
+    "    for train_x in train_X:\n",
+    "        if train_x[classifier_index] <= classifier_treshold:\n",
+    "            if is_first_digit_flag: \n",
+    "                expert_classifications.append(allowed_numbers[0])\n",
+    "            else:\n",
+    "                expert_classifications.append(allowed_numbers[1])\n",
+    "        else:\n",
+    "            if is_first_digit_flag: \n",
+    "                expert_classifications.append(allowed_numbers[1])\n",
+    "            else:\n",
+    "                expert_classifications.append(allowed_numbers[0])\n",
+    "    expert_classification_list.append(expert_classifications)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_by_experts(p, digit_x):\n",
+    "    total_p_first_digit = 0\n",
+    "    total_p_second_digit = 0\n",
+    "    for classifier_index in range(len(classifier_list)):\n",
+    "        classifier_treshold, is_first_digit_flag = classifier_list[classifier_index]\n",
+    "        expert_classifications = []\n",
+    "        if digit_x[classifier_index] <= classifier_treshold:\n",
+    "            if is_first_digit_flag: \n",
+    "                total_p_first_digit += p[classifier_index]\n",
+    "            else:\n",
+    "                total_p_second_digit += p[classifier_index]\n",
+    "        else:\n",
+    "            if is_first_digit_flag: \n",
+    "                total_p_second_digit += p[classifier_index]\n",
+    "            else:\n",
+    "                total_p_first_digit += p[classifier_index]\n",
+    "    if total_p_first_digit >= total_p_second_digit:\n",
+    "        return allowed_numbers[0]\n",
+    "    return allowed_numbers[1] \n",
+    "\n",
+    "def get_error(p):\n",
+    "    errors = 0\n",
+    "    total = 0\n",
+    "    for i in range(len(test_X)):\n",
+    "        if classify_by_experts(p, test_X[i]) != test_Y[i]:\n",
+    "            errors += 1\n",
+    "        total += 1\n",
+    "    return errors / total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 12664/12665. Error = 0.009456264775413711\n"
+     ]
     }
    ],
    "source": [
-    "count_first_class_times[0]"
+    "error_list = []\n",
+    "ps = []\n",
+    "step = 0\n",
+    "total_steps = len(train_Y)\n",
+    "for (p, loss) in mwu(expert_classification_list, train_Y):\n",
+    "    ps.append(p.copy())\n",
+    "    error = get_error(p)\n",
+    "    error_list.append(error)\n",
+    "    clear_output(wait=True)\n",
+    "    print(f\"Step {step}/{total_steps}. Error = {error}\")\n",
+    "    step += 1"
    ]
   },
   {
@@ -182,7 +274,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print the loss through the time\n",
+    "plt.xlabel('T')\n",
+    "plt.ylabel('loss')\n",
+    "plt.plot(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print the loss through the time\n",
+    "plt.xlabel('T')\n",
+    "plt.ylabel('error')\n",
+    "plt.plot(error_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find p with minimum error\n",
+    "min_error = min(error_list)\n",
+    "for i in range(len(error_list)):\n",
+    "    if error_list[i] == min_error:\n",
+    "        p = ps[i]\n",
+    "        break\n",
+    "\n",
+    "p_matrix = np.reshape(np.array(p), (28 , 28))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot most important pixels for classify\n",
+    "plt.imshow(p_matrix, cmap='gray')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
